# vyatsu

./: .gitignore  LICENSE
6_semester/database/cpp/: .gitignore  CMakeLists.txt  app.pro  filee.h  main.cpp  view.ui
6_semester/database/cpp/src/: database.h  main.cpp  model.h  ui.h  view.cpp  view.h
6_semester/parallel_programming/: .gitignore  CMakeLists.txt  Makefile  main.cpp
6_semester/parallel_programming/lab1/: CMakeLists.txt  main.cpp
6_semester/parallel_programming/lab1-3/: CMakeLists.txt
6_semester/parallel_programming/lab1-3/src/: dft.cpp  fft.cpp  fft.h  iter_pfft.cpp  iter_pfft.h  main.cpp  multiply.cpp  omp_iter_fft.h  pfft.cpp  poly.cpp  poly.h  print.cpp  print.h  test.cpp  test.h
6_semester/parallel_programming/lab1/src/: lib.cpp  lib.h  main.cpp  print.h  test.cpp  test.h
6_semester/parallel_programming/lab4/: Makefile
6_semester/parallel_programming/lab4/src/: main.cpp  slave.cpp  slave.h
6_semester/parallel_programming/lab5/: .gitignore  Makefile
6_semester/parallel_programming/lab5/src/: lib.h  main.cpp  master.cpp  slave.cpp
6_semester/parallel_programming/simple_mult/: Makefile
6_semester/parallel_programming/simple_mult/src/: main_check.cpp  main_fft.cpp  main_gen.cpp  main_mult.cpp
6_semester/parallel_programming/src/: dft.cpp  dft.h  fft.cpp  fft.h  iter_pfft.cpp  iter_pfft.h  lib.cpp  lib.h  main.cpp  multiply.cpp  multiply.h  omp_fft.cpp  omp_fft.h  omp_iter_fft.cpp  omp_iter_fft.h  pfft.cpp  pfft.h  poly.cpp  print.cpp  test.cpp  test.h
computer_graphics/: lab.lpi  lab.lps  main.lfm  main.pas  ushapes.pas
computer_math/: makefile  test.kt
diploma/: .gitignore  caption.tex  commands.tex  constants.tex  diploma.tex  frames.tex  lists.tex  titlestyle.tex  toc.tex
(+572 files in other folders)
